# provision

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  IDEA.md  README.md  TODO.md  build.rs  design-system.html  justfile  packages.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.rgba
src/: catalog.rs  install.rs  main.rs  profile.rs  settings.rs  styles.rs  theme.rs  upgrade.rs  views.rs
