[package]
name = "provision"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
lucide-icons = "0.572"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process", "io-util", "time", "fs"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_Foundation"] }
